--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apiai": "^3.0.3",
     "botbuilder": "^3.5.4",
   },
   "devDependencies": {
