--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "bottest",
+  "name": "uvto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "dev": "cd client && npm start"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +19,10 @@
   "devDependencies": {
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
+    "eslint-config-standard-react": "^4.2.0",
     "eslint-plugin-promise": "^3.4.1",
+    "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1"
+
   }
 }
