--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.14.1",
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.3.0",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.0",
     "mongoose-unique-validator": "^1.0.4",
     "sails-mysql": "^0.11.5",
