--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1"
+  },
+  "engines": {
+    "node": "6.10.2",
+    "npm": "3.10.10"
   }
 }
