--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
     "lint": "eslint .",
-    "dev": "cd client && npm start"
+    "dev": "cd client && npm start",
+    "production": "node index.js"
   },
   "author": "",
   "license": "ISC",
